@@ -1,5 +1,17 @@
 2015-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR2359: Ensure all stamp targets have aliases
+	* Makefile.am:
+	Add missing aliases for add-cacao,
+	add-cacao-debug, add-jamvm, add-jamvm-debug,
+	add-systemtap-boot, add-tzdata-support-boot,
+	extract-jamvm, remove-intree-libraries,
+	split-debuginfo, split-debuginfo-boot,
+	split-debuginfo-debug and versioning.
+	* NEWS: Updated.
+
+2015-07-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR1888: Allow tarball checksumming to be disabled
 	* INSTALL: Document new options.
 	* Makefile.am:
